TWC3167-5881:PTE/DE Overlapping deals popup CSS Fixes (#2137)

--- a/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
@@ -1567,3 +1567,6 @@ kendo-tabstrip.tabs-coll .k-tabstrip-items-wrapper ul li span.k-icon.k-i-reload 
 kendo-grid#dealEditor .k-grid-header-wrap {
     background: #fff;
 }
+.deDealsOvrLap mat-dialog-container {
+    padding: 0;
+}
