--- a/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
@@ -682,3 +682,6 @@ button td.button-intel {
     text-align: left;
     color: #00AEEF;
 }
+.pteDealsOvrLap mat-dialog-container {
+    padding: 0;
+}
